--- a/SharpPDFDecrypter/MainWindow.xaml
+++ b/SharpPDFDecrypter/MainWindow.xaml
@@ -1,4 +1,19 @@
-﻿<Window x:Class="SharpPDFDecrypter.MainWindow"
+﻿<!--
+Copyright 2023 Myitian
+
+Licensed under the Apache License, Version 2.0 (the "License");
+you may not use this file except in compliance with the License.
+You may obtain a copy of the License at
+
+    http://www.apache.org/licenses/LICENSE-2.0
+
+Unless required by applicable law or agreed to in writing, software
+distributed under the License is distributed on an "AS IS" BASIS,
+WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+See the License for the specific language governing permissions and
+limitations under the License.
+-->
+<Window x:Class="SharpPDFDecrypter.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -9,8 +24,17 @@
         Height="450"
         Width="800"
         AllowDrop="true"
-        Drop="Window_Drop">
+        Drop="Window_Drop"
+        Closing="Window_Closing">
     <Window.Resources>
+        <RoutedUICommand x:Key="OpenFileCmd" />
+        <RoutedUICommand x:Key="OpenFolderCmd" />
+        <RoutedUICommand x:Key="RemoveItemCmd" />
+        <RoutedUICommand x:Key="ClearListCmd" />
+        <RoutedUICommand x:Key="RunDecryptionCmd" />
+        <RoutedUICommand x:Key="StopDecryptionCmd" />
+        <RoutedUICommand x:Key="LicenseCmd" />
+        <RoutedUICommand x:Key="ProjectInfoCmd" />
         <Style x:Key="MenuButton"
                TargetType="Button">
             <Setter Property="BorderThickness"
@@ -40,36 +64,67 @@
         </Style>
     </Window.Resources>
     <Window.CommandBindings>
-        <CommandBinding Command="{x:Static local:MainWindow.OpenFileCmd}"
+        <CommandBinding Command="{StaticResource OpenFileCmd}"
                         Executed="OpenFile_Executed"
                         CanExecute="OpenFile_CanExecute" />
-        <CommandBinding Command="{x:Static local:MainWindow.OpenFolderCmd}"
+        <CommandBinding Command="{StaticResource OpenFolderCmd}"
                         Executed="OpenFolder_Executed"
                         CanExecute="OpenFolder_CanExecute" />
+        <CommandBinding Command="{StaticResource RemoveItemCmd}"
+                        Executed="RemoveItem_Executed"
+                        CanExecute="RemoveItem_CanExecute" />
+        <CommandBinding Command="{StaticResource ClearListCmd}"
+                        Executed="ClearList_Executed"
+                        CanExecute="ClearList_CanExecute" />
+        <CommandBinding Command="{StaticResource RunDecryptionCmd}"
+                        Executed="RunDecryption_Executed"
+                        CanExecute="RunDecryption_CanExecute" />
+        <CommandBinding Command="{StaticResource StopDecryptionCmd}"
+                        Executed="StopDecryption_Executed"
+                        CanExecute="StopDecryption_CanExecute" />
+        <CommandBinding Command="{StaticResource LicenseCmd}"
+                        Executed="License_Executed"
+                        CanExecute="License_CanExecute" />
+        <CommandBinding Command="{StaticResource ProjectInfoCmd}"
+                        Executed="ProjectInfo_Executed"
+                        CanExecute="ProjectInfo_CanExecute" />
     </Window.CommandBindings>
     <Window.InputBindings>
-        <KeyBinding Key="O"
-                    Modifiers="Ctrl"
-                    Command="{x:Static local:MainWindow.OpenFileCmd}" />
+        <KeyBinding Gesture="Ctrl+O"
+                    Command="{StaticResource OpenFileCmd}" />
     </Window.InputBindings>
     <DockPanel>
         <Menu DockPanel.Dock="Top"
               AutomationProperties.Name="菜单">
             <MenuItem Header="文件 (_F)">
                 <MenuItem Header="添加文件 (_F)"
-                          Command="{x:Static local:MainWindow.OpenFileCmd}" />
+                          InputGestureText="Ctrl+O"
+                          Command="{StaticResource OpenFileCmd}" />
                 <MenuItem Header="添加文件夹 (_D)"
-                          Command="{x:Static local:MainWindow.OpenFolderCmd}" />
-                <MenuItem Header="移除项目 (_R)" />
-                <MenuItem Header="清空列表 (_C)" />
+                          Command="{StaticResource OpenFolderCmd}" />
+                <MenuItem Header="移除项目 (_R)"
+                          Command="{StaticResource RemoveItemCmd}" />
+                <MenuItem Header="清空列表 (_C)"
+                          Command="{StaticResource ClearListCmd}" />
             </MenuItem>
-            <MenuItem Header="运行 (_R)" />
+            <MenuItem Header="运行 (_R)">
+                <MenuItem Header="运行解密 (_S)"
+                          Command="{StaticResource RunDecryptionCmd}" />
+                <MenuItem Header="中止解密 (_E)"
+                          Command="{StaticResource StopDecryptionCmd}" />
+            </MenuItem>
+            <MenuItem Header="关于 (_A)">
+                <MenuItem Header="许可证 (_L)"
+                          Command="{StaticResource LicenseCmd}" />
+                <MenuItem Header="项目信息 (_I)"
+                          Command="{StaticResource ProjectInfoCmd}" />
+            </MenuItem>
         </Menu>
         <StackPanel DockPanel.Dock="Top"
                     Orientation="Horizontal"
                     Background="{DynamicResource {x:Static SystemColors.ControlLightBrushKey}}">
             <Button Style="{StaticResource MenuButton}"
-                    Command="{x:Static local:MainWindow.OpenFileCmd}"
+                    Command="{StaticResource OpenFileCmd}"
                     AutomationProperties.Name="添加文件">
                 <Grid>
                     <Grid.RowDefinitions>
@@ -83,7 +138,7 @@
                 </Grid>
             </Button>
             <Button Style="{StaticResource MenuButton}"
-                    Command="{x:Static local:MainWindow.OpenFolderCmd}"
+                    Command="{StaticResource OpenFolderCmd}"
                     AutomationProperties.Name="添加文件夹">
                 <Grid>
                     <Grid.RowDefinitions>
@@ -97,6 +152,7 @@
                 </Grid>
             </Button>
             <Button Style="{StaticResource MenuButton}"
+                    Command="{StaticResource RemoveItemCmd}"
                     AutomationProperties.Name="移除项目">
                 <Grid>
                     <Grid.RowDefinitions>
@@ -110,6 +166,7 @@
                 </Grid>
             </Button>
             <Button Style="{StaticResource MenuButton}"
+                    Command="{StaticResource ClearListCmd}"
                     AutomationProperties.Name="清空列表">
                 <Grid>
                     <Grid.RowDefinitions>
@@ -123,6 +180,7 @@
                 </Grid>
             </Button>
             <Button Style="{StaticResource MenuButton}"
+                    Command="{StaticResource RunDecryptionCmd}"
                     AutomationProperties.Name="运行解密">
                 <Grid>
                     <Grid.RowDefinitions>
@@ -135,11 +193,26 @@
                     <Label Grid.Row="1">运行解密</Label>
                 </Grid>
             </Button>
+            <Button Style="{StaticResource MenuButton}"
+                    Command="{StaticResource StopDecryptionCmd}"
+                    AutomationProperties.Name="中止解密">
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition />
+                        <RowDefinition />
+                    </Grid.RowDefinitions>
+                    <Image x:Name="StopDecryptionIcon"
+                           Style="{StaticResource MenuImage}"
+                           Grid.Row="0" />
+                    <Label Grid.Row="1">中止解密</Label>
+                </Grid>
+            </Button>
         </StackPanel>
-        <Label DockPanel.Dock="Bottom">空闲</Label>
-        <ListView ItemsSource="{Binding Tasks, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:MainWindow}}}"
+        <Label x:Name="State"
+               DockPanel.Dock="Bottom">空闲</Label>
+        <ListView x:Name="TaskView"
+                  ItemsSource="{Binding Tasks, RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type local:MainWindow}}}"
                   ScrollViewer.CanContentScroll="False"
-                  HorizontalContentAlignment="Stretch"
                   d:ItemsSource="{d:SampleData ItemCount=5}">
             <ListView.ItemContainerStyle>
                 <Style TargetType="ListViewItem">
@@ -155,8 +228,7 @@
                                     Width="250">
                         <GridViewColumn.CellTemplate>
                             <DataTemplate>
-                                <TextBox Text="{Binding SourceFile, Mode=TwoWay}"
-                                         Style="{StaticResource ListTextBox}" />
+                                <TextBlock Text="{Binding SourceFile}" />
                             </DataTemplate>
                         </GridViewColumn.CellTemplate>
                     </GridViewColumn>
