--- a/SharpPDFDecrypter/PasswordWindow.xaml
+++ b/SharpPDFDecrypter/PasswordWindow.xaml
@@ -13,47 +13,61 @@ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 -->
-<Window x:Name="Window"
-        x:Class="SharpPDFDecrypter.PasswordWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:SharpPDFDecrypter"
-        mc:Ignorable="d"
-        Title="输入 PDF 打开口令"
-        SizeToContent="Height"
-        Width="250"
-        Closing="Window_Closing">
+<Window
+    x:Name="Window"
+    x:Class="SharpPDFDecrypter.PasswordWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:local="clr-namespace:SharpPDFDecrypter"
+    mc:Ignorable="d"
+    Title="输入 PDF 打开口令"
+    SizeToContent="Height"
+    Width="250"
+    Closing="Window_Closing">
     <Window.Resources>
-        <RoutedUICommand x:Key="ConfirmCmd" />
-        <RoutedUICommand x:Key="CancelCmd" />
-        <Style TargetType="Button">
-            <Setter Property="DockPanel.Dock"
-                    Value="Right" />
-            <Setter Property="Margin"
-                    Value="2,0" />
-            <Setter Property="Padding"
-                    Value="8,2" />
+        <RoutedUICommand
+            x:Key="ConfirmCmd" />
+        <RoutedUICommand
+            x:Key="CancelCmd" />
+        <Style
+            TargetType="Button">
+            <Setter
+                Property="DockPanel.Dock"
+                Value="Right" />
+            <Setter
+                Property="Margin"
+                Value="2,0" />
+            <Setter
+                Property="Padding"
+                Value="8,2" />
         </Style>
     </Window.Resources>
     <Window.CommandBindings>
-        <CommandBinding Command="{StaticResource ConfirmCmd}"
-                        Executed="Confirm_Executed"
-                        CanExecute="Confirm_CanExecute" />
-        <CommandBinding Command="{StaticResource CancelCmd}"
-                        Executed="Cancel_Executed"
-                        CanExecute="Cancel_CanExecute" />
+        <CommandBinding
+            Command="{StaticResource ConfirmCmd}"
+            Executed="Confirm_Executed"
+            CanExecute="Confirm_CanExecute" />
+        <CommandBinding
+            Command="{StaticResource CancelCmd}"
+            Executed="Cancel_Executed"
+            CanExecute="Cancel_CanExecute" />
     </Window.CommandBindings>
     <StackPanel>
-        <TextBlock TextWrapping="WrapWithOverflow"
-                   Text="{Binding Info, ElementName=Window}" />
-        <PasswordBox x:Name="Password" />
-        <DockPanel LastChildFill="False">
-            <Button Content="确认"
-                    Command="{StaticResource ConfirmCmd}" />
-            <Button Content="取消"
-                    Command="{StaticResource CancelCmd}" />
+        <TextBlock
+            TextWrapping="WrapWithOverflow"
+            Text="{Binding Info, ElementName=Window}" />
+        <PasswordBox
+            x:Name="Password" />
+        <DockPanel
+            LastChildFill="False">
+            <Button
+                Content="确认"
+                Command="{StaticResource ConfirmCmd}" />
+            <Button
+                Content="取消"
+                Command="{StaticResource CancelCmd}" />
         </DockPanel>
     </StackPanel>
 </Window>
